# textalytics-core

./: .gitignore  README.md  config.py  pyproject.toml
tests/: test_entity_recognition.py
textalytics_core/: entity_recognition.py  resources.py
