[tool.poetry]
name = "textalytics-core"
version = "0.1.2"
description = "core textalytics capabilities"
authors = ["Manoj Bharadwaj <manoj@cloudcosmos.tech>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
path = "./venv"

[tool.poetry.scripts]
test = 'scripts:test'

